test/typechecker.d/invalid/fns7.surc.bad
n: Integer = 5

f(x: Char): Integer = x
